tests/badarray2.err
3: error: cannot find symbol 'a'
	a[3] = 5;
	^
