tests/badarray2.juice
// storing to an array which has not been declared

a[3] = 5;
